--- a/RoiToken/package.json
+++ b/RoiToken/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@nomicfoundation/hardhat-verify": "^2.0.13",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "dotenv": "^16.5.0",
     "ethers": "^5.8.0",
-    "hardhat": "^2.23.0"
+    "hardhat": "^2.24.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0"
