--- a/RoiLabs_Contracts/package.json
+++ b/RoiLabs_Contracts/package.json
@@ -14,7 +14,8 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "dotenv": "^16.5.0",
     "ethers": "^5.8.0",
-    "hardhat": "^2.24.0"
+    "hardhat": "^2.24.0",
+    "solc": "^0.8.20"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0"
